@startuml REPORT MODULE

package "Report Module" {

    class ReportController {
        - ReportService reportService

        + getMonthlyReport(request : MonthlyReportRequest) : List<MonthlyReportResponse>
    }

    class MonthlyReportRequest {
        - int userID
        - LocalDateTime startDate
        - LocalDateTime endDate
    }

    class ReportService {
        - TransactionRepository transactionRepository

        + getMonthlyReport(request : MonthlyReportRequest) : List<MonthlyReportResponse>
    }

    class MonthlyReportResponse {
        - String month
        - double income
        - double expense
        - double net
        - Map<String, double> expenseByCategory
    }

    ' Relationships
    ReportController --> MonthlyReportRequest
    ReportController --> ReportService

    ReportService --> TransactionRepository : queries
    ReportService --> MonthlyReportResponse : uses
}

@enduml
